--- a/proof_generator/Cargo.toml
+++ b/proof_generator/Cargo.toml
@@ -17,7 +17,8 @@ franklin_crypto = { package = "franklin-crypto", path = "../franklin-crypto", fe
 handlebars = "4.3.3"
 hex = "0.4.3"
 once_cell = "1.13.0"
-rand = "0.8.5"
+rand = "0.4"
+rlp = "0.5.2"
 reqwest = { version = "0.11.11", features = ["blocking", "json"] }
 serde = {version = "1", features = ["derive"]}
 serde_json = "1.0.82"
